# irmas_torch

./: .gitignore  README.md  benchmark.py  irmas_torch.py  pyproject.toml  script.py  test.py  train.py  train_lightning.py  train_old.py  unit_tests.py  vis.py
config/: config.yaml
config/datamodule/: default.yaml
config/datamodule/dataloader/: default.yaml
config/datamodule/dataset/: irmas.yaml
config/datamodule/transform/: default.yaml
config/dataset/: irmas.yaml
config/experiment/: default.yaml  exp0.yaml
config/module/: default.yaml
config/module/model/: resnet18.yaml
config/module/optimizer/: adam.yaml
config/train/: default.yaml
config/trainer/: default.yaml
config/transform/: default.yaml
experiments/: resnet50_test.yaml  template.yaml  test.yaml
irmas_torch/: config.py  datasets.py  lightning_modules.py  networks.py  transforms.py
nbs/: Eval.ipynb  Untitled.ipynb
nbs/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: config.py  datasets.py  networks.py  train.py  transforms.py  utils.py
tests/: unit_tests.py
